# Pure_pursuit-Car_like-vehicle

./: README.md
Docker/: Dockerfile  entrypoint.sh  run_docker.sh
polaris_gem_drivers_sim/gem_pure_pursuit_sim/: CMakeLists.txt
polaris_gem_drivers_sim/gem_pure_pursuit_sim/scripts/: odom_pub.py  path_visual.py  pure_pursuit_sim.py
polaris_gem_drivers_sim/gem_pure_pursuit_sim/src/: PurePursuit.cpp  PurePursuit.h  main.cpp  wps.csv
polaris_gem_simulator/gem_simulator/gem_description/config_rviz/: gem_gazebo_rviz.rviz
polaris_gem_simulator/gem_simulator/gem_description/urdf/: gem.urdf.xacro
polaris_gem_simulator/gem_simulator/gem_gazebo/launch/: gem_gazebo_rviz.launch  gem_sensor_info.launch
polaris_gem_simulator/waypoint_logger/scripts/: waypoint_logger.py
